[gd_scene load_steps=4 format=2]

[ext_resource path="res://physics/shock_wave/shock_wave_visual.gd" type="Script" id=1]
[ext_resource path="res://physics/shock_wave/shock_stripe.tscn" type="PackedScene" id=2]
[ext_resource path="res://physics/shock_wave/shock_wave_config.tres" type="Resource" id=3]

[node name="ShockWaveVisual" type="Spatial"]
script = ExtResource( 1 )
shock_wave_config = ExtResource( 3 )

[node name="ShockStripe_1" parent="." instance=ExtResource( 2 )]

[node name="ShockStripe_2" parent="." instance=ExtResource( 2 )]

[node name="ShockStripe_3" parent="." instance=ExtResource( 2 )]

[node name="ShockStripe_4" parent="." instance=ExtResource( 2 )]

[node name="ShockStripe_5" parent="." instance=ExtResource( 2 )]

[node name="ShockStripe_6" parent="." instance=ExtResource( 2 )]
